--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@ body {
 
 /* Estilos para o Header */
 header {
-  background-color: black;
-  color: white;
+  background-color: rgb(141, 50, 114);
+  color: rgb(248, 195, 222);
   padding: 20px;
   text-align: center;
 }
@@ -25,7 +25,7 @@ p {
 
 /* Estilos para a Navegação */
 nav {
-  background-color: #333;
+  background-color: #f8ff97;
   padding: 10px 0;
 }
 
@@ -40,7 +40,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: white;
+  color: rgb(235, 86, 185);
   text-decoration: none;
   font-size: 1.1rem;
 }
@@ -67,11 +67,17 @@ main p {
 
 /* Estilos para o Footer */
 footer {
-  background-color: #333;
-  color: white;
+  background-color: rgb(226, 225, 141);
   text-align: center;
   padding: 10px;
   position: fixed;
   width: 100%;
   bottom: 0;
 }
+
+.footer ul li a {
+  color: rgb(235, 86, 185);
+  text-decoration: none;
+  font-size: 1.1rem;
+}
+
