--- a/src/Home.css
+++ b/src/Home.css
@@ -8,7 +8,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4; /* Cor de fundo para o site */
-  color: yellow; /* Texto padrão */
+  /*color: yellow; Texto padrão */
 }
 
 /* Cabeçalho */
