--- a/src/sobreNos.css
+++ b/src/sobreNos.css
@@ -1,17 +1,3 @@
-/* Reset geral 
- {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; /* Garante que o padding não afete o tamanho total dos elementos 
-}
-
-Body
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;  Cor de fundo 
-  color: #606649; /* Texto padrão 
-}*/
-
 /* Cabeçalho */
 header {
   background-color: #8d3272; /* Cor do fundo do cabeçalho */
@@ -127,10 +113,10 @@ main {
   filter: invert(1); /* Faz os controles ficarem brancos para melhor visibilidade */
 }
 
-/* Rodapé */
+/* Footer */
 footer {
-  background-color: #8d3272; /* Cor de fundo igual ao cabeçalho */
-  color: #f8c3de; /* Cor do texto igual ao cabeçalho */
+  background-color: #8d3272;  /* Cor de fundo igual ao header */
+  color: #f8c3de;  /* Cor do texto igual ao header */
   padding: 20px;
   display: flex;
   justify-content: space-between;
@@ -156,32 +142,20 @@ footer nav ul li {
 }
 
 footer nav ul li a {
-  color: #f8c3de;
+  color:  #8d3272;  /* Cor dos links igual ao texto no header */
   text-decoration: none;
   font-size: 1.1rem;
   transition: color 0.3s ease;
 }
 
 footer nav ul li a:hover {
-  color: #f8ff97;
+  color: #f8ff97;  /* Amarelo quando passa o mouse */
   text-decoration: underline;
 }
 
-footer .footer-images {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-footer .footer-images img {
-  margin-left: 10px;
-  width: 50px;
-  height: auto;
-}
-
 footer div p {
-  background-color: #f8ff97; /* Cor de fundo amarelo */
-  color: #8d3272; /* Cor do texto roxo */
+  background-color: #f8ff97;  /* Cor de fundo amarela */
+  color: #8d3272;  /* Cor do texto roxa */
   font-size: 1rem;
   margin-top: 15px;
   font-weight: bold;
@@ -192,24 +166,23 @@ footer div p {
 /* Responsividade */
 @media (max-width: 768px) {
   footer nav ul li {
-    display: block;
-    margin: 10px 0;
+      display: block;
+      margin: 10px 0;
   }
 
-  header h2,
-  footer div p {
-    font-size: 1.5rem;
+  main h3 {
+      font-size: 1.6rem;
+  }
+
+  main p {
+      font-size: 1rem;
+  }
+
+  header h2, footer div p {
+      font-size: 1.5rem;
   }
 
   .carousel-inner img {
-    height: auto;
-  }
-
-  main h2 {
-    font-size: 1.6rem;
-  }
-
-  .values li {
-    font-size: 1rem;
+      height: auto;
   }
 }
